# claude-flow

./: CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/helpers/: cache-optimizer-hooks.sh  daemon-manager.sh  statusline.cjs
agents/: architect.yaml  coder.yaml  reviewer.yaml  security-architect.yaml  tester.yaml
docs/ruvector-postgres/: README.md
docs/ruvector-postgres/examples/: basic-queries.sql
docs/ruvector-postgres/scripts/: cleanup.sh
docs/v3/: SDK-ARCHITECTURE-ANALYSIS.md
v3/: package-lock.json  pnpm-lock.yaml
v3/.agentic-flow/: intelligence.json
v3/@claude-flow/browser/: README.md
v3/@claude-flow/cache-interceptor/: package.json
v3/@claude-flow/cache-optimizer/: vitest.config.ts
v3/@claude-flow/claims/: package.json
v3/@claude-flow/cli/: README.md  package.json
v3/@claude-flow/memory-interceptor/: package.json
v3/docs/: adr-005-implementation-summary.md
v3/implementation/adrs/: ADR-029-claude-flow-attention-library.md  ADR-034-legal-contract-plugin.md  ADR-035-code-intelligence-plugin.md  ADR-038-multi-agent-coordination-plugin.md  ADR-040-quantum-inspired-plugin.md  ADR-041-hyperbolic-reasoning-plugin.md  ADR-043-gastown-bridge-plugin.md  ADR-STATUS-SUMMARY.md
v3/implementation/v3-migration/: CAPABILITY-GAP-ANALYSIS.md
v3/integration/: attention-coordinator.ts
v3/plugins/gastown-bridge/wasm/ruvector-gnn-wasm/: Cargo.toml
v3/plugins/gastown-bridge/wasm/ruvector-gnn-wasm/src/: critical.rs
(+140 files in other folders)
